--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,7 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 // bower:scss
-@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
+@import "sweetalert2/src/sweetalert2.scss";
+@import "components-font-awesome/scss/font-awesome.scss";
 // endbower
 
 .browsehappy {
@@ -58,6 +59,12 @@ body {
   }
 }
 
+li.pokemon{
+  font-size: 16pt;
+  line-height: 1.5em;
+  padding: .1em;
+}
+
 /* Supporting marketing content */
 .marketing {
   margin: 40px 0;
@@ -88,4 +95,86 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+img.pop {
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    -webkit-transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+    &:hover {
+        -webkit-transform: scale(1.1, 1.1);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+    }
+}
+
+.interactive {
+  cursor: pointer;
+}
+
+.pop-text {
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    -webkit-transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+    &:hover {
+        -webkit-transform: scale(1.1, 1.1);
+        text-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+    }
+}
+
+.animate-slideDown {
+    -webkit-transition: all 0.6s  ease;
+    transition: all 0.6s  ease;
+
+    &.ng-hide{
+        margin-top: 100% !important;
+    }
+
+    &.ng-show{
+        margin-top: 0 !important;
+    }
+}
+
+.full-height {
+  height: 100%;
+}
+
+#OverLay {
+    background-color: #eee;
+    position: fixed !important;
+    width: 100% !important;
+    height: 100% !important;
+    margin: 0;
+    text-align: center;
+    vertical-align: middle;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    z-index: 100;
+}
+
+.md-warn .md-input {
+  border-color: black;
+}
+
+li.pokemon.active {
+  color: #FF754A;
+}
+
+.animate-fade.ng-move,
+.animate-fade.ng-enter,
+.animate-fade.ng-leave {
+    -webkit-transition: all ease 0.3s;
+    transition: all ease 0.3s;
+}
+
+.animate-fade.ng-leave.ng-leave-active,
+.animate-fade.ng-move,
+.animate-fade.ng-enter {
+    opacity: 0;
+}
+
+.animate-fade.ng-leave,
+.animate-fade.ng-move.ng-move-active,
+.animate-fade.ng-enter.ng-enter-active {
+    opacity: 1;
 }
