--- a/app/views/main.html
+++ b/app/views/main.html
@@ -72,4 +72,21 @@
 
     <div class="full-height" ng-include="mapsUrl" ng-></div>
 
+    <div class="bottomBar">
+        <a class="pop-text" href="mailto:Patrick_lai@hellokitty.com?Subject=Reports" target="_top">
+        Reports
+        </a>
+        /
+        <a class="pop-text" href="mailto:Patrick_lai@hellokitty.com?Subject=Suggetions" target="_top">
+        Suggetions
+        </a>
+        /
+        <a class="pop-text" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=patrick_lai%40hellokitty%2ecom&lc=AU&no_note=0&currency_code=AUD&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted" target="_blank">
+          Donations
+        </a>
+        to
+        <a class="pop-text" href="mailto:Patrick_lai@hellokitty.com?Subject=Pokemon" target="_top">
+          Patrick_lai@hellokitty.com
+        </a>
+    </div>
 </div>
