--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -226,3 +226,9 @@ li.pokemon{
 .animate-fade.ng-enter.ng-enter-active {
     opacity: 1;
 }
+
+.angular-google-map,
+.angular-google-map-container {
+  width: 100%;
+  height: 100%;
+}
