Added HelpBox GScript ignores empty rows and does GeoCoding

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,6 +11,10 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   padding: 0.2em 0;
 }
 
+i span {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
 body {
   padding: 0;
 }
