Added link to report Form

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -29,6 +29,11 @@
              <i class="fa fa-question-circle interactive" aria-hidden="true"> <span>How to Use?</span>  </i>
            </div>
          </li>
+         <li class="pokemon pop-text">
+           <a flex href="{{reportFormUrl}}" target="_blank" style="color: white;">
+             <i class="fa fa-flag interactive" aria-hidden="true"> <span>Report Form</span>  </i>
+           </a>
+         </li>
          <li class="pokemon">
            <div flex class="pop-text">
              <span class="pokemon-id interactive" ng-click="setPokemon(null)">Show All</span>
