--- a/app/views/map.html
+++ b/app/views/map.html
@@ -1,6 +1,17 @@
 <div class="full-height">
   <ui-gmap-google-map center='map.center' zoom='map.zoom'>
-    <ui-gmap-layer type="FusionTablesLayer" options="map.fusionlayer.options" show="true"></ui-gmap-layer>
+    <ui-gmap-markers
+            models='filteredPokemon'
+            idKey="'id'"
+            coords="'self'"
+            icon="'image'"
+            options="markerOptions"
+            >
+            <ui-gmap-windows show="show">
+                <div>
+                  <timer end-time="expiration_time * 1000">{{minutes}}m:{{seconds}}s</timer>
+                </div>
+            </ui-gmap-windows>
+    </ui-gmap-markers>
   </ui-gmap-google-map>
-  <!-- <iframe class="full-height" style="width: 100%;" scrolling="no" frameborder="no" ng-src="{{getIframeUrl()}}"></iframe> -->
 </div>
