--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,6 +4,10 @@
     <span style="font-size: 12pt; display: block; margin: .5em 0;"></span>
   </h1>
 </div> -->
+<div class="pikachuLoading" ng-show="loading">
+    <img src="images/loading.gif" alt="Loading">
+    <h2 class="pop-text" style="text-align: center; color: yellow; text-shadow: 0px 0px 8px rgba(0, 0, 0, 1);">Loading</h2>
+</div>
 
 <section layout="row" flex>
    <!-- Left -->
