Upgraded polling Compressed fonts and images

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -9,5 +9,6 @@
             >
     </ui-gmap-markers>
     <ui-gmap-window show="map.window.show" coords="map.window.model" options="map.window.options" closeClick="map.window.closeClick()" templateUrl="'views/infowindow.tpl.html'" templateParameter="map.window"></ui-gmap-window>
+    <ui-gmap-marker coords="map.center" idKey="'myPosition'"></ui-gmap-marker>
   </ui-gmap-google-map>
 </div>
