--- a/app/views/map.html
+++ b/app/views/map.html
@@ -4,7 +4,7 @@
             models='filteredPokemon'
             idKey="'id'"
             coords="'self'"
-            icon="'image'"
+            icon="https://ugc.pokevision.com/images/pokemon/{{pokemonId}}.png"
             events="map.markersEvents"
             >
     </ui-gmap-markers>
