--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,9 +4,12 @@
     <span style="font-size: 12pt; display: block; margin: .5em 0;"></span>
   </h1>
 </div> -->
-<div class="pikachuLoading" ng-show="loading">
+<div class="pikachuLoading" ng-show="loading" style="text-align: center;">
     <img src="images/loading.gif" alt="Loading">
-    <h2 class="pop-text" style="text-align: center; color: yellow; text-shadow: 0px 0px 8px rgba(0, 0, 0, 1);">Loading</h2>
+    <h2 class="pop-text" style="text-align: center; color: yellow; text-shadow: 0px 0px 8px rgba(0, 0, 0, 1);">
+      Loading <br/>
+      Currently only works in Sydney CBD
+    </h2>
 </div>
 
 <section layout="row" flex>
@@ -32,12 +35,12 @@
              <i class="fa fa-question-circle interactive" aria-hidden="true"> <span>How to Use?</span>  </i>
            </div>
          </li>
-         <!-- <li style="padding: 1em;">
+         <li style="padding: 1em;">
            <md-slider-container>
              <span>Distance: {{appSettings.distance}}m </span>
              <md-slider flex min="1" max="1000" ng-model="appSettings.distance" ng-change="updateDistance(appSettings.distance)" aria-label="distance">
            </md-slider>
-         </li> -->
+         </li>
          <li style="padding: 0 1em;">
            <md-switch ng-model="$parent.followLocation" aria-label="follow location">
               Use Current Location: {{followLocation ? 'yes' : 'no'}}
